<resources>
    <string name="app_name">HMSDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="start_meeting">Start Meeting</string>
    <string name="end_meeting">End Meeting</string>

    <string name="user_id">Enter your name</string>
    <string name="room_id">Room id</string>
    <string name="role">Role</string>
    <string name="access_key">Access Key</string>
</resources>