<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="in.uniruddh.hmsdemo.ui.MeetingViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MeetingActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participantList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.onPeerUpdated ? View.VISIBLE : View.GONE,default=gone}"
            android:layout_above="@+id/endMeetButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/endMeetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/end_meeting"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.onPeerUpdated ? View.GONE : View.VISIBLE,default=visible}"
            android:padding="16dp">

            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/user_id"
                android:inputType="text"
                android:padding="10dp"
                android:text="@={viewModel.userId}" />

            <EditText
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/role"
                android:inputType="text"
                android:padding="10dp"
                android:text="@={viewModel.role}" />

            <EditText
                android:id="@+id/roomId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/room_id"
                android:inputType="text"
                android:padding="10dp"
                android:text="@={viewModel.roomId}" />

            <EditText
                android:id="@+id/accessKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/access_key"
                android:inputType="text"
                android:padding="10dp"
                android:text="@={viewModel.accessKey}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startMeetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="16dp"
                android:text="@string/start_meeting" />
        </LinearLayout>

    </RelativeLayout>

</layout>